--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@aws-sdk/client-s3": "^3.328.0",
     "@contentful/rich-text-html-renderer": "^16.0.4",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "markdown-it": "^13.0.1",
     "preact": "^10.13.2",
-    "preact-render-to-string": "^6.0.3"
+    "preact-render-to-string": "^6.0.3",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1"
   }
 }
